--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1> HTML ➡ MongoDB 😎</h1>
-        <form class="container" method="post" action="/">
+        <form class="container" method="post" action="/api/">
             <div class="from-group">
                 <input class="form-control" name="name">
             </div>
